--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-diary-app",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "bootswatch": "^5.1.3",
