--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fullcalendar/bootstrap5": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
@@ -15,9 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-    "bootswatch": "^5.1.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
@@ -31,7 +28,7 @@
     "react-scripts": "5.0.1",
     "reselect": "^4.1.6",
     "styled-components": "^5.3.5",
-    "uuid": "^8.3.2",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
